Dark mode fixes, URL embed

--- a/public/main.css
+++ b/public/main.css
@@ -27,9 +27,13 @@
 
 		--border: #303030;
 	}
-	pre code.hljs {
+	code {
 		filter: invert(1);
 		border-left-color: #B0B238;
+	}
+	/* This is inline code */
+	p > code {
+		color: black;
 	}
 }
 
@@ -310,6 +314,16 @@ aside {
 	margin: 0;
 	font-size: .9rem;
 }
+.message .urlEmbed .embedUrl {
+	color: var(--textSecondary);
+	margin-top: 5px;
+	opacity: 0.5;
+	font-size: .8rem;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
 .urlEmbed .embedDescription {
 	color: var(--textSecondary);
 }
@@ -323,6 +337,9 @@ aside {
 }
 
 /* Code */
+p > code {
+	padding: 2px 10px;
+}
 code {
 	width: 100%;
 	box-sizing: border-box;
